# Stereo-Hand-Tracking

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.ipynb  requirements.txt
include/: bounding_box.h  dataset_loader.h  depth_projector.h  hand_modeler.h  hand_segmentation.h  projector.h  stereo_matching.h
include/depth_estimation/: hand_segmentation.h  stereo_matching.h
include/hand_pose_estimation/: depth_projector.h  heatmap_fusion.h
scripts/: generate_gt_heatmaps.py  generate_pred_heatmaps.py  gt_heatmap_gen.py  heatmap-estimator.py  heatmap_estimator.py  image_util.py  multiview-cnn.ipynb  projection_dataset.py
src/: bounding_box.cpp  data_loading.py  dataset_loader.cpp  depth_projector.cpp  hand_modeler.cpp  hand_modeling.py  hand_segmentation.cpp  main.cpp  neural_net.py  projection_generation.cpp  stereo_matching.cpp  stereo_matching.py
src/depth_estimation/: hand_segmentation.cpp  main.cpp  stereo_matching.cpp
src/hand_pose_estimation/: fusion_analysis.cpp  fusion_visualization.cpp  heatmap_fusion.cpp  projection_generation.cpp
